cabal-version:      3.14
name:               tiramisu-haskell
version:            0.0.0.1
license:            BSD-3-Clause
license-file:       LICENSE
author:             bokutotu
maintainer:         mushin.hudoushin@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
        -Werror
library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
test-suite tiramisu-haskell-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.1.0,
        tiramisu-haskell
